--- a/.development.env
+++ b/.development.env
@@ -4,3 +4,4 @@ POSTGRES_DB=django_db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 DEBUG=True
+SECRET_KEY=django-insecure-+ie02t@yi3rnag79o@zmjo$#%p(i)$ja72&4!-(87m%qo_zp+6
